[metadata]
name = mv_viz
version = 0.1.0
author = Hilary Luo and contributors
description = A simple python GUI tool to visualize multivariate data and create PCA models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hilary-luo/mv_viz
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >=3.9
install_requires =
    numpy >= 1.22
    pandas >= 1.5
    scikit-learn >= 1.2.2
    PyQt6 >= 6.4
    pyqtgraph >= 0.13.3

[options.entry_points]
console_scripts =
    mv_viz = mv_viz.mv_viz:main

[options.packages.find]
where = src
include = mv_viz

[options.package_data]
mv_viz = media/*